# RasgoTransforms

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Rasgo Transforms Tutorial.ipynb  UDT Tutorial.ipynb  UDTs User Challenge.ipynb  create_transforms.py  docker-compose.yml  pylintrc
rasgotransforms/: DESCRIPTION.md  pyproject.toml  requirements-tests.txt  requirements.txt  setup.py
rasgotransforms/rasgotransforms/: __init__.py  dtypes.py  environment.py  exceptions.py  jinja.py  main.py  render.py  testing_utils.py  transforms.py  version.py
rasgotransforms/rasgotransforms/accelerators/: active_user_analysis.yaml  b2b_funnel.yml  baby_name_analysis.yaml  gaps_check.yaml  lead_scoring.yml  omni_channel_performance.yaml  omni_channel_performance.yml  plg.yml  plg_funnel.yaml  sales_growth_funnel.yaml  web_traffic_channels.yml  website_page_performance.yml
rasgotransforms/rasgotransforms/macros/: combine_groups.sql  distinct_values.sql  expression_metrics.sql  filter.sql  period_over_period.sql  period_to_date.sql  prior.sql  rolling.sql  secondary_calculation.sql
rasgotransforms/rasgotransforms/render/: __init__.py  environment.py  infer_columns.py  transforms.py
rasgotransforms/rasgotransforms/snippets/: agg.sql  agg_dict.sql  alias.sql  boolean.sql  calculated_column_list.sql  column.sql  column_agg_list.sql  column_list.sql  column_or_expression.sql  column_or_expression_list.sql  column_value.sql  column_value_list.sql  custom_option.sql  custom_option_list.sql  date.sql  date_part.sql  decimal.sql  filter_list.sql  int.sql  join_type  join_type.sql  number_list  sort_dict.sql  sort_direction.sql  string.sql  string_list.sql  table.sql  table_list.sql  timestamp.sql
rasgotransforms/rasgotransforms/testing/: utils.py
rasgotransforms/rasgotransforms/tests/: plot_test.py  (+2 more)
rasgotransforms/scripts/: install-local.sh
(+863 files in other folders)
